# relay-connect

./: .gitignore  .wakatime-project  CHANGELOG.md  KEEP_STREAK_1.md  KEEP_STREAK_2.md  KEEP_STREAK_3.md  KEEP_STREAK_MORE_1.md  KEEP_STREAK_MORE_2.md  KEEP_STREAK_MORE_3.md  QUICKSTART.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  NOOB_GUIDE.md  TROUBLESHOOTING.md  copilot_prompts.md
examples/: quickstart.py  sdk_usage.py  termux_connect.py
relay/: __init__.py  __main__.py  agent.py  agent_entry.py  cli.py  client.py  config.py  crypto.py  exceptions.py  protocol.py  server.py
scripts/: dev_start.sh  run_tests.sh  setup_laptop.sh  setup_termux.sh
tests/: __init__.py  test_cli.py  test_config.py  test_crypto.py  test_integration.py  test_protocol.py  test_regressions.py
